19 Nov 2007
Assorted minor updates: fixed issue with SDSSPix pixel boundaries, added 2dF230k weight function, added rounding tolerances in rect_to_poly function
--Molly Swanson
--------------------------------------------------------------------------------

8 Sept 2007
Fixed segmentation fault issue when NPOLYSMAX >~ 3000000 by allocating the main polygon arrays globally rather than locally.  Also added calls to free_poly to clean up memory at the end of all programs.
--Molly Swanson
--------------------------------------------------------------------------------

3 Sep 2007
Changed snap and pixelize to use -vo instead of -vn.  
Updated rasterize.c to use pixelization info in the most efficient manner possible.
Removed balkanizepolys.c and snappolys.c (put this code back into balkanize.c and snap.c, respectively).
Rewrote rasterize.c in the same format as the other main programs.
--Colin Hill
--------------------------------------------------------------------------------

18 August 2007
Added a script named healpixpolys.scr which constructs, pixelizes, and snaps the HEALPix pixels at any value of Nside.
--Colin Hill
--------------------------------------------------------------------------------

18 August 2007
Redesigned the rasterize algorithm so that no balkanization is required.  Rasterize now works by computing the area of the intersection between each input mask polygon and each rasterizer polygon, and using each of these areas in the calculation of the area-averaged weight within each rasterizer pixel.  This scheme is completely general and should work for not only the HEALPix pixels, but also other sets of rasterizer pixels.
--Colin Hill
--------------------------------------------------------------------------------

2 June 2007
Changed rasterize.c so that only one array of polygon pointers is used (instead of two).
--Colin Hill

--------------------------------------------------------------------------------
30 May 2007